add links to index.erb and add route

--- a/ruby/sinatra/views/index.erb
+++ b/ruby/sinatra/views/index.erb
@@ -1,3 +1,9 @@
 <h1>Hi, I'm located in the index</h1>
-<h2>here are your tasks:</h2>
-<p><%= @todo_list.all %></p>
+
+<h2>what would you like to do?</h2>
+
+<ul>
+  <li><a href="/add">Add to todo list</a></li>
+  <li><a href="/add">Remove a task</a></li>
+  <li><a href="/add">Delete all tasks</a></li>
+</ul>
