update: update modified index.rb

--- a/ruby/sinatra/views/index.erb
+++ b/ruby/sinatra/views/index.erb
@@ -4,6 +4,6 @@
 
 <ul>
   <li><a href="/add">Add to todo list</a></li>
-  <li><a href="/add">Remove a task</a></li>
-  <li><a href="/add">Delete all tasks</a></li>
+  <li><a href="/remove">Remove a task</a></li>
+  <li><a href="/delete">Delete all tasks</a></li>
 </ul>
